--- a/template/common-head.html
+++ b/template/common-head.html
@@ -5,13 +5,12 @@
     <meta name="twitter:title" content="{{title}}" />
     <meta name="twitter:description" content="{{description}}" />
     <meta name="twitter:creator" content="@sangdolha" />
+    <meta name="twitter:card" content="summary_large_image">
 
     {{#images}}
-    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://iamsang.com/{{.}}" />
     {{/images}}
     {{^images}}
-    <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="https://iamsang.com/logo.png" />
     {{/images}}
 
@@ -19,13 +18,14 @@
     <meta property="og:image" content="https://iamsang.com/{{.}}" />
     {{/images}}
     {{^images}}
-<!--    <meta property="og:image" content="https://iamsang.com/facebook_image.png" />-->
-    <meta property="og:image" content="https://6d4cce4d12f2.ngrok.io/facebook_image.png" />
+    <meta property="og:image" content="https://iamsang.com/logo.png" />
     {{/images}}
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <link rel="shortcut icon" type="image/png" href="/icon-192x192.png">
+    <link rel="shortcut icon" sizes="192x192" href="/icon-192x192.png">
+    <link rel="apple-touch-icon" href="/icon-192x192.png">
+
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
