--- a/template/en/article-template.html
+++ b/template/en/article-template.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko-kr">
+<html lang="en-us">
 <head>
-    <title>{{kr-blog-title}} :: {{title}}</title>
-    <meta name="description" content="{{description}}">
+    <title>{{blog-title}} :: {{title}}</title>
     {{&common-head}}
 </head>
 <body>
 {{&common-header}}
 <div class="container article">
+    <div class="page-heading">{{title}}</div>
     {{&body}}
 </div>
 {{&common-footer}}
