--- a/template/en/common-header.html
+++ b/template/en/common-header.html
@@ -1,20 +1,18 @@
     <section class="top">
-        <nav>
+        <nav class="nav">
             <a href="/"><span>Home</span></a>
-<!--            <a href="/about"><span>About</span></a>-->
-<!--            <a href="/popular"><span>Popular</span></a>-->
-<!--            <a href="https://twitter.com/iamsangcom"><span>Twitter</span></a>-->
+            <a href="/en"><span>Posts</span></a>
+            <a href="https://twitter.com/iamsangcom"><span>Twitter</span></a>
         </nav>
     </section>
     <hr class="top-line">
     <section class="header">
         <div class="container">
             <div class="content">
-                <a href="/">
-                    <div class="name">
-                        Sanghyun Lee
-                    </div>
-                </a>
+                <div class="name">
+                    I am
+                    <span class="colored" style="font-weight:100">Sang</span>
+                </div>
             </div>
         </div>
     </section>
