--- a/css/custom.css
+++ b/css/custom.css
@@ -36,6 +36,9 @@
 .lighter {
   color: var(--font-lighter-color) !important;
 }
+.no-padding-left {
+  padding-left: 0;
+}
 
 body {
   background-color: white;
@@ -45,9 +48,14 @@ body {
   font-family: 'Open Sans', 'Helvetica Neue', 'Arial', sans-serif;
   font-size: var(--font-size);
   max-width: 658px;
+  -webkit-font-smoothing: antialiased;
 }
 
 /* nav */
+.en-footer {
+  padding-top: 50px;
+}
+
 section.top nav {
   color: var(--font-color);
   font-size: var(--font-nav-size);
@@ -57,6 +65,15 @@ section.top nav {
 section.top nav span {
   display: inline-block;
   margin: 0 8px;
+}
+
+hr.top-line-en {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid var(--font-lighter-color);
+    margin: 8px 0;
+    padding: 0;
 }
 
 hr.top-line {
@@ -70,6 +87,20 @@ hr.top-line {
 
 section {
   text-align: center;
+}
+
+#home {
+  margin-top: 50px;
+  line-height: 30px;
+}
+
+#home div {
+  margin-bottom: 15px;
+}
+
+#home .logo {
+  margin-top: -21px;
+  float: right;
 }
 
 #container {
