--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,6 @@
   --font-size: 16px;
   --font-code-size: 16px;
   --font-small-size: 14px;
-  --font-header-size: 28px;
   --font-heading-size: 24px;
   --font-nav-size: 14px;
   --font-date-size: 14px;
@@ -48,7 +47,6 @@ body {
   font-family: 'Open Sans', 'Helvetica Neue', 'Arial', sans-serif;
   font-size: var(--font-size);
   max-width: 658px;
-  -webkit-font-smoothing: antialiased;
 }
 
 /* nav */
@@ -304,6 +302,11 @@ input[type], code {
   background-color: var(--code-color);
 }
 
+code {
+  padding: 0 0.3em;
+  font-size: 1.0em;
+}
+
 pre > code.hljs {
   background: var(--code-color);
 }
@@ -315,4 +318,14 @@ blockquote {
 h3 {
   font-size: 1.3em;
   font-weight: var(--font-heading-weight);
+}
+
+h4 {
+  font-size: 1.1em;
+  font-weight: var(--font-bold-weight);
+}
+
+h3 code, h4 code {
+  padding: 0;
+  background-color: transparent;
 }
