--- a/template/en/home-template.html
+++ b/template/en/home-template.html
@@ -9,21 +9,19 @@
     <div>
         <img src="/icon-192x192.png" alt="icon" class="logo"/>
     </div>
-    <div class="text">
-      <div>
-          Hello, my name is Sanghyun Lee.
-      </div>
+    <div>
+        My name is Sanghyun Lee.
+    </div>
 
-      <div>
-          I'm a software engineer from South Korea and currently live in Berlin.
-      </div>
+    <div>
+        I'm a software engineer from South Korea and living in Berlin at the moment.
+    </div>
 
-      <div>
-          I write articles and draw comics in
-          <a href="/blog">Korean</a>
-          and
-          <a href="/en">English</a>.
-      </div>
+    <div>
+        I write about software related topics in
+        <a href="/blog">Korean</a>
+        and
+        <a href="/en">English</a>.
     </div>
 </div>
 </body>
