--- a/css/custom.css
+++ b/css/custom.css
@@ -97,8 +97,8 @@ section {
 }
 
 #home .logo {
-  float: right;
   margin-top: -21px;
+  float: right;
 }
 
 #container {
@@ -137,6 +137,15 @@ a:hover {
 
 .article a:hover {
   border-bottom-color: var(--font-color);
+}
+
+/*overriding sakura.css <ul> margin-bottom*/
+.article ul {
+  margin-bottom: 0;
+}
+
+.article > ul {
+  margin-bottom: 2.5rem;
 }
 
 section.header .name {
@@ -225,15 +234,6 @@ section.icons .content a .flag {
   .container.list .content .post-item .meta {
     display: block;
     float: none;
-  }
-
-  #home .logo {
-    margin-right: -20px;
-    margin-left: -30px;
-  }
-
-  #home .text {
-    margin: 0 20px;
   }
 }
 
@@ -325,12 +325,13 @@ blockquote {
 }
 
 h3 {
-  font-size: 1.3em;
-  font-weight: var(--font-heading-weight);
+  font-size: 1.4em;
+  font-weight: var(--font-bold-weight);
 }
 
 h4 {
   font-size: 1.1em;
+  color: var(--font-light-color);
   font-weight: var(--font-bold-weight);
 }
 
