--- a/css/custom.css
+++ b/css/custom.css
@@ -88,6 +88,7 @@ section {
 }
 
 #home {
+  max-width: 500px;
   margin-top: 50px;
   line-height: 30px;
 }
@@ -97,8 +98,12 @@ section {
 }
 
 #home .logo {
-  margin-top: -21px;
   float: right;
+  margin-top: -21px;
+}
+
+#home .text {
+  margin: 0 20px;
 }
 
 #container {
@@ -137,15 +142,6 @@ a:hover {
 
 .article a:hover {
   border-bottom-color: var(--font-color);
-}
-
-/*overriding sakura.css <ul> margin-bottom*/
-.article ul {
-  margin-bottom: 0;
-}
-
-.article > ul {
-  margin-bottom: 2.5rem;
 }
 
 section.header .name {
@@ -234,6 +230,11 @@ section.icons .content a .flag {
   .container.list .content .post-item .meta {
     display: block;
     float: none;
+  }
+
+  #home .logo {
+    margin-right: -20px;
+    margin-left: -30px;
   }
 }
 
@@ -325,13 +326,12 @@ blockquote {
 }
 
 h3 {
-  font-size: 1.4em;
-  font-weight: var(--font-bold-weight);
+  font-size: 1.3em;
+  font-weight: var(--font-heading-weight);
 }
 
 h4 {
   font-size: 1.1em;
-  color: var(--font-light-color);
   font-weight: var(--font-bold-weight);
 }
 
